# stable-liberty-guts

./: .coveragerc  .testr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  openstack-common.conf  pylintrc  requirements.txt  run_tests.sh  setup.cfg  setup.py  tests-py3.txt  tox.ini
devstack/: README.rst  plugin.sh  settings
doc/: Makefile  README.rst
doc/source/: api-documenation.rst  architecture.rst  automated-installation.rst  conf.py  configuration-reference.rst  developer-guide.rst  getting-involved.rst  index.rst  installation-guide.rst  internal-components.rst  manual-installation.rst  user-guide.rst
etc/guts/: README-guts.conf.sample  api-httpd.conf  api-paste.ini  guts.conf  logging_sample.conf  policy.json  rootwrap.conf
etc/guts/rootwrap.d/: migration.filters
guts/: context.py  exception.py  i18n.py  manager.py  opts.py  policy.py  rpc.py  service.py  utils.py  version.py
guts/api/: __init__.py  common.py  extensions.py  urlmap.py  versions.py  xmlutil.py
guts/api/contrib/: __init__.py  extended_services.py  (+5 more)
guts/cmd/: all.py  api.py  manage.py  migration.py
guts/common/: config.py
guts/compute/: nova.py
guts/config/: generate_guts_opts.py  guts-config-generator.conf
guts/db/: __init__.py  api.py  base.py  migration.py
guts/hacking/: checks.py
guts/image/: glance.py
guts/migration/: __init__.py  driver.py  manager.py  migrations.py  rpcapi.py  sources.py  types.py  vms.py
guts/objects/: __init__.py  base.py  service.py
guts/wsgi/: common.py  eventlet_server.py  wsgi.py
tools/: bandit.yaml  check_exec.py  colorizer.py  enable-pre-commit-hook.sh  install_venv.py  install_venv_common.py  lintstack.py  lintstack.sh
tools/config/: check_uptodate.sh  generate_sample.sh
(+43 files in other folders)
