[metadata]
name = guts
version = 1.0.0
summary = Migration as a Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    guts

[entry_points]
oslo.config.opts =
    guts = guts.opts:list_opts
    keystonemiddleware = keystonemiddleware.auth_token:list_opts
    oslo_concurrency = oslo_concurrency.opts:list_opts
    oslo.messaging = oslo_messaging.opts:list_opts
    oslo.db.concurrency = oslo.db.concurrency:list_opts
console_scripts =
    guts-all = guts.cmd.all:main
    guts-api = guts.cmd.api:main
    guts-migration = guts.cmd.migration:main
    guts-manage = guts.cmd.manage:main
    guts-rootwrap = oslo_rootwrap.cmd:main
guts.database.migration_backend =
    sqlalchemy = oslo_db.sqlalchemy.migration

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = guts/locale
domain = guts

[update_catalog]
domain = guts
output_dir = guts/locale
input_file = guts/locale/guts.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = guts/locale/guts.pot
